--- a/DeerCuts/DeerCuts/Clients/FindClient.xaml
+++ b/DeerCuts/DeerCuts/Clients/FindClient.xaml
@@ -6,11 +6,11 @@
         xmlns:local="clr-namespace:DeerCuts.Clients"
         mc:Ignorable="d"
         Style="{DynamicResource bgdGrey}"
-        Title="FindClient" Height="300" Width="327.551">
-    <Grid Margin="0,0,2,0">
-        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="102,212,0,0" VerticalAlignment="Top" Width="57" Click="btnClear_Click" Height="20"/>
+        Title="FindClient" Height="257.507" Width="327.551">
+    <Grid Margin="0,0,2,-21">
+        <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="102,187,0,0" VerticalAlignment="Top" Width="57" Click="btnClear_Click" Height="20"/>
         <Button x:Name="btnFind" Content="Find
-" HorizontalAlignment="Left" Margin="238,212,0,0" VerticalAlignment="Top" Width="45" Click="btnFind_Click" RenderTransformOrigin="1.361,0.637" Height="20"/>
+" HorizontalAlignment="Left" Margin="238,187,0,0" VerticalAlignment="Top" Width="45" Click="btnFind_Click" RenderTransformOrigin="1.361,0.637" Height="20"/>
 
         <Label x:Name="label" Content="Email" HorizontalAlignment="Left" Margin="42,98,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="23" Margin="102,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
@@ -22,11 +22,9 @@
         <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="23" Margin="102,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
         <Label x:Name="label1" Content="Phone" HorizontalAlignment="Left" Margin="36,126,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="23" Margin="102,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
-        <Label x:Name="label9" Content="Password                " HorizontalAlignment="Left" Margin="16,154,0,0" VerticalAlignment="Top" Width="81"/>
-        <TextBox x:Name="txtPIN" HorizontalAlignment="Left" Height="23" Margin="102,154,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
-        <Label x:Name="label9_Copy" Content="License" HorizontalAlignment="Left" Margin="28,182,0,0" VerticalAlignment="Top" Width="64"/>
-        <TextBox x:Name="txtLicenseNumber" HorizontalAlignment="Left" Height="23" Margin="102,182,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
-        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="20" Margin="164,212,0,0" VerticalAlignment="Top" Width="69" Click="btnDash_Click" RenderTransformOrigin="0.216,0.636"/>
+        <Label x:Name="label9_Copy" Content="License" HorizontalAlignment="Left" Margin="28,157,0,0" VerticalAlignment="Top" Width="64"/>
+        <TextBox x:Name="txtLicenseNumber" HorizontalAlignment="Left" Height="23" Margin="102,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
+        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="20" Margin="164,187,0,0" VerticalAlignment="Top" Width="69" Click="btnDash_Click" RenderTransformOrigin="0.216,0.636"/>
 
     </Grid>
 </Window>
