--- a/DeerCuts/DeerCuts/Clients/UpdateClient.xaml
+++ b/DeerCuts/DeerCuts/Clients/UpdateClient.xaml
@@ -9,7 +9,7 @@
         Title="UpdateClient" Height="300" Width="385.835">
     <Grid>
         <Button x:Name="btnClear" Content="Clear" HorizontalAlignment="Left" Margin="134,232,0,0" VerticalAlignment="Top" Width="71" Click="btnClear_Click" Height="20"/>
-        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="275,232,0,0" VerticalAlignment="Top" Width="70" Click="btnSave_Click" Height="20"/>
+        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="306,232,0,0" VerticalAlignment="Top" Width="39" Click="btnSave_Click" Height="20"/>
 
         <Label x:Name="label" Content="Email" HorizontalAlignment="Left" Margin="66,120,0,0" VerticalAlignment="Top" Width="52"/>
         <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="23" Margin="134,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="211"/>
@@ -26,7 +26,8 @@
         <Label x:Name="label9_Copy" Content="License" HorizontalAlignment="Left" Margin="46,204,0,0" VerticalAlignment="Top" Width="72"/>
         <TextBox x:Name="txtLicenseNumber" HorizontalAlignment="Left" Height="23" Margin="134,204,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="211"/>
         <ComboBox x:Name="comboBox" HorizontalAlignment="Left" Height="24" Margin="134,7,0,0" VerticalAlignment="Top" Width="211"/>
-        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="20" Margin="210,232,0,0" VerticalAlignment="Top" Width="60" Click="btnDash_Click" RenderTransformOrigin="0.216,0.636"/>
+        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="20" Margin="210,232,0,0" VerticalAlignment="Top" Width="47" Click="btnDash_Click" RenderTransformOrigin="0.216,0.636"/>
+        <Button x:Name="btnFind" Content="Find" HorizontalAlignment="Left" Margin="262,232,0,0" VerticalAlignment="Top" Width="39" Click="btnSave_Click" Height="20" />
 
     </Grid>
 </Window>
