--- a/DeerCuts/DeerCuts/Orders/CreateOrder.xaml
+++ b/DeerCuts/DeerCuts/Orders/CreateOrder.xaml
@@ -6,26 +6,19 @@
         xmlns:local="clr-namespace:DeerCuts.Orders"
         mc:Ignorable="d"
         Style="{DynamicResource bgdGrey}"
-        Title="CreateOrder" Height="280.453" Width="327.195">
-    <Grid Margin="0,0,2,-3">
-        <Label x:Name="label" Content="Jerky" HorizontalAlignment="Left" Margin="22,34,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="23" Margin="76,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy3" Content="Burger" HorizontalAlignment="Left" Margin="14,65,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy3" HorizontalAlignment="Left" Height="23" Margin="76,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy4" Content="Steak" HorizontalAlignment="Left" Margin="21,96,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy4" HorizontalAlignment="Left" Height="23" Margin="76,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy5" Content="Chops" HorizontalAlignment="Left" Margin="16,122,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy5" HorizontalAlignment="Left" Height="23" Margin="76,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy6" Content="# Deer" HorizontalAlignment="Left" Margin="13,178,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy6" HorizontalAlignment="Left" Height="23" Margin="76,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy" Content="Ribs" HorizontalAlignment="Left" Margin="27,150,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy1" HorizontalAlignment="Left" Height="23" Margin="76,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy1" Content="Weight" HorizontalAlignment="Left" Margin="11,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy2" HorizontalAlignment="Left" Height="23" Margin="76,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <ComboBox x:Name="cmbClients" HorizontalAlignment="Left" Margin="183,10,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label1" Content="Client" HorizontalAlignment="Left" Margin="138,10,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnCreate" Content="Create" HorizontalAlignment="Left" Margin="228,178,0,0" VerticalAlignment="Top" Width="75" Click="btnCreate_Click"/>
-        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="20" Margin="161,178,0,0" VerticalAlignment="Top" Width="60" Click="btnDash_Click" RenderTransformOrigin="0.527,-0.179"/>
+        Title="CreateOrder" Height="282.042" Width="253.308">
+    <Grid Margin="0,0,22,0">
+        <Label x:Name="label_Copy6" Content="# Deer" HorizontalAlignment="Left" Margin="20,143,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumDeer" HorizontalAlignment="Left" Height="23" Margin="93,143,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cmbClients" HorizontalAlignment="Left" Margin="93,10,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cmbClients_SelectionChanged"/>
+        <Label x:Name="label1" Content="Client" HorizontalAlignment="Left" Margin="27,10,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnCreate" Content="Create" HorizontalAlignment="Left" Margin="154,196,0,0" VerticalAlignment="Top" Width="59" Click="btnCreate_Click" Height="20"/>
+        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="20" Margin="93,196,0,0" VerticalAlignment="Top" Width="56" Click="btnDash_Click" RenderTransformOrigin="0.527,-0.179"/>
+        <DatePicker x:Name="DropOffDate" HorizontalAlignment="Left" Height="38" Margin="93,46,0,0" VerticalAlignment="Top" Width="120"/>
+        <DatePicker x:Name="PickUpDate" HorizontalAlignment="Left" Height="38" Margin="93,94,0,0" VerticalAlignment="Top" Width="120" />
+        <Label x:Name="label1_Copy" Content="Drop Off" HorizontalAlignment="Left" Margin="8,46,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1_Copy1" Content="Pick Up" HorizontalAlignment="Left" Margin="13,94,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnIntakeDeer" Content="Intake Deer" HorizontalAlignment="Left" Height="20" Margin="93,171,0,0" VerticalAlignment="Top" Width="120" Click="btnIntakeDeer_Click"/>
 
     </Grid>
 </Window>
