--- a/DeerCuts/DeerCuts/Orders/FindOrder.xaml
+++ b/DeerCuts/DeerCuts/Orders/FindOrder.xaml
@@ -8,33 +8,15 @@
         Style="{DynamicResource bgdGrey}"
         Title="FindOrder" Height="300" Width="326.02" Closing="Window_Closing">
     <Grid>
-        <Label x:Name="label" Content="Jerky" HorizontalAlignment="Left" Margin="22,34,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="23" Margin="76,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy3" Content="Burger" HorizontalAlignment="Left" Margin="14,65,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy3" HorizontalAlignment="Left" Height="23" Margin="76,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy4" Content="Steak" HorizontalAlignment="Left" Margin="21,96,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy4" HorizontalAlignment="Left" Height="23" Margin="76,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy5" Content="Chops" HorizontalAlignment="Left" Margin="16,122,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy5" HorizontalAlignment="Left" Height="23" Margin="76,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy6" Content="# Deer" HorizontalAlignment="Left" Margin="13,178,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy6" HorizontalAlignment="Left" Height="23" Margin="76,178,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy" Content="Ribs" HorizontalAlignment="Left" Margin="27,150,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy1" HorizontalAlignment="Left" Height="23" Margin="76,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <Label x:Name="label_Copy1" Content="Weight" HorizontalAlignment="Left" Margin="11,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox_Copy2" HorizontalAlignment="Left" Height="23" Margin="76,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="48"/>
-        <ComboBox x:Name="cmbClients" HorizontalAlignment="Left" Margin="186,10,0,0" VerticalAlignment="Top" Width="120" Foreground="#FFAEFFA8">
-            <ComboBox.Background>
-                <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
-                    <GradientStop Color="#FFF0F0F0" Offset="0"/>
-                    <GradientStop Color="#FF333333" Offset="1"/>
-                </LinearGradientBrush>
-            </ComboBox.Background>
-        </ComboBox>
-        <Label x:Name="label1" Content="Client" HorizontalAlignment="Left" Margin="141,10,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnFind" Content="Find" HorizontalAlignment="Left" Margin="231,178,0,0" VerticalAlignment="Top" Width="75" Click="btnFind_Click" Height="22"/>
-        <ComboBox x:Name="cmbStatus" HorizontalAlignment="Left" Height="22" Margin="186,42,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label2" Content="Status" HorizontalAlignment="Left" Margin="139,38,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="22" Margin="165,178,0,0" VerticalAlignment="Top" Width="61" Click="btnDash_Click" RenderTransformOrigin="0.216,0.636"/>
-
+        <Label x:Name="label_Copy6" Content="# Deer" HorizontalAlignment="Left" Margin="20,143,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNumDeer" HorizontalAlignment="Left" Height="23" Margin="93,143,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cmbClients" HorizontalAlignment="Left" Margin="93,10,0,0" VerticalAlignment="Top" Width="120" />
+        <Label x:Name="label1" Content="Client" HorizontalAlignment="Left" Margin="27,10,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnDash" Content="Cancel" HorizontalAlignment="Left" Height="20" Margin="93,196,0,0" VerticalAlignment="Top" Width="120" Click="btnDash_Click" RenderTransformOrigin="0.527,-0.179"/>
+        <DatePicker x:Name="DropOffDate" HorizontalAlignment="Left" Height="38" Margin="93,46,0,0" VerticalAlignment="Top" Width="120"/>
+        <DatePicker x:Name="PickUpDate" HorizontalAlignment="Left" Height="38" Margin="93,94,0,0" VerticalAlignment="Top" Width="120" />
+        <Label x:Name="label1_Copy" Content="Drop Off" HorizontalAlignment="Left" Margin="8,46,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1_Copy1" Content="Pick Up" HorizontalAlignment="Left" Margin="13,94,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnLookup" Content="Lookup Order" HorizontalAlignment="Left" Height="20" Margin="93,171,0,0" VerticalAlignment="Top" Width="120" Click="btnLookupOrder_Click"/>
     </Grid>
 </Window>
